State before the introduction of 3d model

--- a/assets/snowflakes.json
+++ b/assets/snowflakes.json
@@ -11,7 +11,7 @@
       "random": true
     },
     "line_linked": {
-      "enable": false
+      "enable": true
     },
     "move": {
       "enable": true,
